2007-03-23  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/hotkey_manager.py: Added more keys to the key
	combo entry.

2007-03-23  Eitan Isaacson  <eitan@ascender.com>

	* Makefile.am: Added gconf schema and schema installation
	* accerciser.schemas: A new schema with default values for plugin layout.
	* configure.in: Added gconf stuff
	* debian/changelog: Bumped to version 0.2.0
	* debian/rules: Added dh_gconf
	* plugins/api_view.py: Capitalized plugin name
	* plugins/console.py: Capitalized plugin name
	* plugins/event_monitor.py: Capitalized plugin name
	* plugins/interface_view.py: Capitalized plugin name
	* src/lib/accerciser/accerciser.py: Using gconf for saving and
	restoring main window size.
	* src/lib/accerciser/hotkey_manager.py: Using gconf for saving and
	restoring global hotkey combinations.
	* src/lib/accerciser/plugin_manager.py: Using gconf for saving and
	restoring plugin layout and pluginview dimensions.
	* src/lib/accerciser/tools.py: removed old *.ini save/load stuff.

2007-03-21  Eitan Isaacson  <eitan@ascender.com>

	* plugins/event_monitor.py: Changed to new global hotkey method.
	* src/accerciser.glade: Removed plugins dialog, and replaced with
	global hotkey scheme.
	* src/lib/accerciser/Makefile.am: Added hotkey_manager.py
	* src/lib/accerciser/accerciser.py: Removed plugin dialog. Added
	preferences dialog and added hotkey manager.
	* src/lib/accerciser/hotkey_manager.py: A new global hotkey
	manager. A centralized place to do all hotkey configurations.
	* src/lib/accerciser/plugin.py: Changed to new global hotkey method.
	* src/lib/accerciser/plugin_manager.py: Changed to new global 
	hotkey method.

2007-03-20  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/node.py: Fix bug 420774.
	* src/lib/accerciser/pyLinAcc.zip: Re-packaged with new pyLinAcc 
	revision (bug 420832).

2007-03-20  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/accerciser.py: 