@@ -1,3 +1,10 @@
+2007-03-27  Eitan Isaacson  <eitan@ascender.com>
+
+	* src/accerciser.glade: Set correct paned positions. Added missing
+	callbacks to main window.
+	* src/lib/accerciser/accerciser.py: Save and restore paned positions.
+	* src/lib/accerciser/plugin_manager.py: refactor PluginManager.
+
 2007-03-23  Eitan Isaacson  <eitan@ascender.com>
 
 	* src/lib/accerciser/hotkey_manager.py: Added more keys to the key
